fix docker compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -13,7 +13,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 20
@@ -34,13 +34,8 @@ services:
     restart: "no"
 
   app:
-    profiles: ["app"]
-    build:
-      context: .
-    image: hackaton-backend:local
+    build: .
     depends_on:
-      postgres:
-        condition: service_healthy
       flyway:
         condition: service_completed_successfully
     environment:
@@ -54,4 +49,3 @@ services:
 
 volumes:
   postgres_data:
-
