--- a/compose.yaml
+++ b/compose.yaml
@@ -43,6 +43,8 @@ services:
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER:-hackaton}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:?set POSTGRES_PASSWORD in .env}
       SPRING_FLYWAY_ENABLED: "false"
+      JWT_SECRET: ${JWT_SECRET:-dev-secret-change-me}
+      JWT_EXPIRES_DAYS: ${JWT_EXPIRES_DAYS:-3650}
     ports:
       - "${APP_BIND_IP:-0.0.0.0}:${APP_PORT:-8080}:8080"
     restart: unless-stopped
